# big-parsers-generators-comparison

./: .gitignore  LICENSE  README.md  pyproject.toml
antlr/: example.py  grammar.g4
antlr_/: Example.g4  README.md  example.py
arpeggio/: example.py
lark/: example.py
lark_/: example.py
lrparsing/: example.py
parse_/: example.py
parsec_/: example.py
parsimonious/: example.py
parsimonious_/: example.py
parsley/: example.py
parsy/: example.py
pegen/: README.md  example.py  grammar
ply/: example.py
ply_/: example.py  parser.out  parsetab.py
pyleri/: example.py
pyparsing/: example.py
pypeg/: example.py
re/: example.py
regex_/: example.py
sly/: example.py
tatsu/: example.py
textx/: example.py
waxeye/: example.py
