[tool.poetry]
name = "syntax-parser"
version = "0.1.0"
description = ""
authors = ["xnuinside <xnuinside@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.5"
parsimonious = "^0.10.0"
pyparsing = "^3.0.9"
ply = "^3.11"
lrparsing = "^1.0.13"
Parsley = "^1.3"
parse = "^1.19.0"
pyleri = "^1.4.2"
Arpeggio = "^2.0.0"
textX = "^3.1.1"
TatSu = "^5.8.3"
parsy = "^2.1"
parsec = "^3.15"
pegen = "^0.2.0"
sly = "^0.5"
regex = "^2023.3.23"
antlr4-python3-runtime = "^4.12.0"
antlr4-tools = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
